# aestream

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  about.html  aedat.hpp  aedat4.cpp  aedat4.hpp  aestream.html  aestream_ext.html  cli.html  compile_commands.json  convert.cpp  convert.hpp  converter.cpp  development.html  dvs_gesture.hpp  events_generated.h  file_data_table_generated.h  flake.nix  frame_generated.h  genindex.html  getting_started.html  imus_generated.h  index.html  install.html  install_manifest.txt  ioheader_generated.h  objects.inv  py-modindex.html  pyproject.toml  python_usage.html  (+9 more)
.doctrees/: about.doctree  aestream.doctree  aestream_ext.doctree  cli.doctree  development.doctree  environment.pickle  getting_started.doctree  index.doctree  install.doctree  python_usage.doctree  rfc_api.doctree  stubs_api.doctree
.github/workflows/: build.yml  documentation.yml  publish.yml
_sources/: about.md.txt  aestream.rst.txt  aestream_ext.rst.txt  cli.md.txt  getting_started.md.txt  install.md.txt
aestream/: __init__.py  __init__.pyi  _genn.py  _input.py
docs/: API_prototyping.py  Makefile  README.md  about.md  aestream.rst  api_proto.py  conf.py  development.md  getting_started.md  index.md  index.rst  install.md  make.bat  python_api.md  python_api.rst  python_usage.md  rfc_api.md  stubs_api.md
docs/usage/: getting_started.md  getting_started.rst
docsrc/: conf.py  index.md
example/: davis.aedat4  file_read.py  file_stream.py  prophesee_imu.py  requirements.txt  sample.csv  sample.raw  sdl.py  speck_video.py  udp_client.py  udp_video.py  usb_edgedetection.py  usb_genn.py  usb_genn_edge_detection.py  usb_norse.py  usb_pytorch.py  usb_stream.py  usb_video.py
example_data/: user01_natural.aedat  user01_natural_labels.csv
example_data/ibm/: LICENSE
example_data/kth/: example.aedat4
export2python/: DVSGenerator.py
include/aestream/: CMakeLists.txt  aer.hpp  dvs_gesture.hpp  generator.hpp
include/aestream/file/: aedat4.hpp  dat.hpp  utils.hpp
include/aestream/file/flatbuffers/: frame.fbs  imus.fbs
include/aestream/input/: file.hpp  inivation.hpp
include/aestream/output/: dvs_to_file.hpp  dvs_to_tensor.hpp
scripts/: eval_workload.py
src/: CMakeLists.txt  Makefile  README.md  aedat.hpp  aedat4.cpp  aedat4.hpp  aestream  aestream.cpp  cmake_install.cmake  device_discovery.c  device_discovery.cpp  dvs2tensor.cpp  dvs2tensor.hpp  dvs2udp.cpp  dvs2udp.hpp  dvs2udp.hpp.txt  dvsToFile.cpp  dvsToFile.hpp  dvsToTensor.cpp  dvsToTensor.hpp  dvsToUDP.cpp  dvsToUDP.hpp  dvs_gesture.hpp  events_generated.h  file_data_table_generated.h  frame_generated.h  generator.hpp  imus_generated.h  ioheader_generated.h  setup.py  stream.cpp  stream2tensor.cpp  streamToTensor.cpp  trigger_generated.h  usb.cpp  usb.hpp  viewer.cpp
src/aestream/: __init__.py  _input.py
src/cpp/: CMakeLists.txt  aestream.cpp  generator.hpp
src/cpp/file/: CMakeLists.txt  aedat4.hpp  csv.hpp  dat.hpp  evt3.hpp  utils.hpp
src/cpp/file/flatbuffers/: ioheader.fbs
src/cpp/input/: CMakeLists.txt  file.cpp  file.hpp  prophesee.cpp
src/cpp/output/: CMakeLists.txt
src/cpp/python/: CMakeLists.txt  tensor_buffer.cpp  tensor_iterator.cpp  tensor_iterator.hpp  udp.cpp  udp_client.cpp  usb.cpp
src/cpp/viewer/: viewer.cpp  viewer.hpp
src/file/: CMakeLists.txt  aedat4.hpp  csv.hpp  dat.cpp  dat.hpp  evt3.hpp  utils.cpp  utils.hpp
src/file/flatbuffers/: events.fbs  file_data_table.fbs
src/flatbuffers/: file_data_table.fbs  ioheader.fbs  trigger.fbs
src/input/: CMakeLists.txt  Makefile  file.cpp  file.hpp  file_aedat4.hpp  file_dat.cpp  file_dat.hpp  file_utils.cpp  file_utils.hpp  inivation.cpp  inivation.hpp  inivation_device.cpp  inivation_device.hpp  prophesee.cpp  prophesee.hpp  zmq.cpp  zmq.hpp
src/output/: CMakeLists.txt  Makefile  dvs_to_file.cpp  dvs_to_file.hpp  dvs_to_tensor.cpp  dvs_to_tensor.hpp  dvs_to_udp.cpp  dvs_to_udp.hpp
src/process/: CMakeLists.txt  transformation.cpp  transformation.hpp  undistortion.cpp  undistortion.hpp
src/pybind/: CMakeLists.txt  convert.cpp  convert.hpp  file.cpp  file.hpp  input.hpp  iterator.cpp  module.cpp  tensor_buffer.cpp  tensor_buffer.hpp  tensor_buffer_cuda.cpp  tensor_buffer_kernel.cu  tensor_buffer_kernel.h  tensor_iterator.cpp  tensor_iterator.hpp  types.hpp  udp.cpp  udp_client.cpp  udp_listener.cpp  usb.cpp  zmq.cpp
src/pybind/test/: __init__.py  test_file.py  test_udp.py  test_zmq.py
src/python/: CMakeLists.txt  convert.cpp  file.cpp  file.hpp  module.cpp  tensor_buffer.cpp  tensor_buffer.hpp  tensor_buffer_kernel.cu  tensor_iterator.hpp  types.hpp  udp_client.hpp  usb.cpp
src/python/test/: __init__.py  test_file.py  test_read.py  test_udp.py
src/torch/: CMakeLists.txt
src/viewer/: viewer.cpp  viewer.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  aedat_test.cpp  cmake_install.cmake  file_test.cpp  main_test.cpp  process_test.cpp  torch_test.cpp
